Revision history for Dancer::Plugin::Cache::CHI

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [ENHANCEMENTS]

1.1.0 2011-08-24
 [ENHANCEMENTS]
 - add 'cache_remove' helper function. Patch by  David Precious. [GH#1]

1.0.2 2011-07-17
 [BUG FIXES]
 - fix 'check_page_cache'. Looks like the behavior of 'halt' changed since
   the last release of D::P::C::CHI.

1.0.1 2011-04-04

1.0.0 2011-04-02

0.2.2 2011-04-02

0.2.1 2011-03-20

0.2.0 2011-03-19

0.1.0 2011-03-16
